--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.1.3",
+    "@apollo/client": "^3.1.4",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.18.0",
+    "firebase": "^7.19.0",
+    "firebaseui": "^4.6.1",
     "graphql": "^15.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.1.1"
+    "react-scroll-to-bottom": "^3.0.0",
+    "styled-components": "^5.1.1",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "scripts": {
     "start": "react-scripts start",
